Remove link to MMS from changelog

--- a/src/pages/changelog.mdx
+++ b/src/pages/changelog.mdx
@@ -69,7 +69,7 @@ Added [aep doc remastered](/aep-remastered) and [kelz expose document](/kelz).
 
 ## 25 November 2023
 
-Added [my mental state.](/my-mental-state) and [SYNTAX Staff Handbook](/syntax-staff-handbook).
+Added "my mental state." and [SYNTAX Staff Handbook](/syntax-staff-handbook).
 
 ## 23 November 2023
 
